<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.EntranceFragment">

    <LinearLayout
        android:id="@+id/avtores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intelone"
            android:text="@string/sign_in_header"
            android:textColor="@color/gray"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/please_sign_in_div"
            android:textColor="@color/light_gray"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/entrance_edit_text"
            android:gravity="top"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="14dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/entrance_edit_text"
            android:gravity="top"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="14dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_entrance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blue"
            android:padding="24dp"
            android:text="@string/btn_entrance"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_account_text"
                android:textColor="@color/light_gray"
                android:layout_marginStart="60dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_div"
                android:textColor="@color/blue"
                android:layout_marginStart="5dp"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>



</FrameLayout>